--- a/requirements/requirements.in
+++ b/requirements/requirements.in
@@ -30,7 +30,7 @@ pillow
 shtab
 oslex
 google-generativeai
-mcp==1.12.3
+mcp
 
 # The proper dependency is networkx[default], but this brings
 # in matplotlib and a bunch of other deps
@@ -38,16 +38,16 @@ mcp==1.12.3
 # We really only need networkx itself and scipy for the repomap.
 #
 # >3.5 seems to not be available for py3.10
-networkx<3.5
+networkx
 
 # This is the one networkx dependency that we need.
 # Including it here explicitly because we
 # didn't specify networkx[default] above.
 #
 # 1.16 onwards only supports python3.11+
-scipy<1.16
+scipy
 
 # GitHub Release action failing on "KeyError: 'home-page'"
 # https://github.com/pypa/twine/blob/6fbf880ee60915cf1666348c4bdd78a10415f2ac/twine/__init__.py#L40
 # Uses importlib-metadata
-importlib-metadata<8.0.0
+importlib-metadata
